<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/Menu"
        android:layout_width="85dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:text="@string/Menu"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Settings"
        android:layout_width="98dp"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Settings"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Inventory_Tracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/InventoryTracker"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Recycler_View"
        android:scrollbars="vertical"
        android:layout_width="385dp"
        android:layout_height="312dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Inventory_Tracker" />

    <Button
        android:id="@+id/Add_Inventory"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:text="@string/AddInventory"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Recycler_View"
        app:layout_constraintVertical_bias="0.465" />


</androidx.constraintlayout.widget.ConstraintLayout>