<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="411dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Item"
                android:layout_width="95dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="Grapes"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Quantity"
                android:layout_width="95dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="24dp"
                android:text="Quantity"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/Item"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_constraintLeft_toRightOf="@id/Item" />

            <TextView
                android:id="@+id/Quantity_Number"
                android:layout_width="95dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="24dp"
                android:text="20"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@id/Quantity"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/Increase"
                android:layout_width="95dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/Increase"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Quantity_Number" />

            <Button
                android:id="@+id/Decrease"
                android:layout_width="95dp"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:text="@string/Decrease"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@id/Increase"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/Delete"
                android:layout_width="95dp"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:text="@string/Delete"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@id/Decrease"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>